updates to include secondary types in selects